# sovereign-ibc

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  constants.json  deny.toml  flake.nix  rust-toolchain.toml  rustfmt.toml  taplo.toml
ci/risc0-check/methods/guest/: Cargo.toml
ci/risc0-check/methods/guest/src/: main.rs
clients/ics08-wasm/: Cargo.toml  README.md
clients/ics08-wasm/src/: client_message.rs  client_state.rs  consensus_state.rs  lib.rs  msg.rs  serializer.rs
clients/ics08-wasm/types/: Cargo.toml
clients/ics08-wasm/types/src/: client_message.rs  client_state.rs  lib.rs  msg.rs  serializer.rs
clients/sov-celestia/: Cargo.toml
clients/sov-celestia-cw/: Cargo.toml  README.md
clients/sov-celestia-cw/src/: consensus_state.rs  entrypoints.rs  handlers.rs  lib.rs  tests.rs
clients/sov-celestia-cw/src/context/: client_ctx.rs  core_ctx.rs  custom_ctx.rs  mod.rs
clients/sov-celestia-cw/src/contexts/: client_ctx.rs  core_ctx.rs  custom_ctx.rs  definition.rs  mod.rs
clients/sov-celestia-cw/src/contract/: entrypoints.rs  error.rs  mod.rs  msgs.rs  processed_states.rs
clients/sov-celestia-cw/src/tests/: fixture.rs  mod.rs
clients/sov-celestia-cw/src/types/: client_state.rs  client_type.rs  consensus_state.rs  error.rs  mod.rs  msgs.rs  processed_states.rs  response.rs  serializer.rs  utils.rs
clients/sov-celestia-cw/src/types/client_message/: aggregate_snark.rs  celestia_header.rs  mod.rs  pretty.rs  sov_header.rs  sov_misbehaviour.rs
clients/sov-celestia-cw/src/types/client_state/: definition.rs  impls.rs  misbehaviour.rs  mod.rs  update.rs
clients/sov-celestia-cw/src/types/consensus_state/: definition.rs  mod.rs
clients/sov-celestia/cw-contract/: Cargo.toml
clients/sov-celestia/cw-contract/src/: client_type.rs  entrypoint.rs  entrypoints.rs  lib.rs
clients/sov-celestia/cw-contract/src/tests/: fixture.rs  mod.rs
clients/sov-celestia/src/: client_state.rs  consensus_state.rs  context.rs  error.rs  lib.rs  proto.rs
clients/sov-celestia/src/client_message/: aggregate_snark.rs  celestia_header.rs  mod.rs  pretty.rs  sov_header.rs  sov_misbehaviour.rs
clients/sov-celestia/src/client_state/: common.rs  definition.rs  execution.rs  impls.rs  misbehaviour.rs  mod.rs  update.rs  update_client.rs  validation.rs
clients/sov-celestia/src/consensus_state/: definition.rs  mod.rs
clients/sov-celestia/types/: Cargo.toml
clients/sov-celestia/types/src/: codec.rs  error.rs  lib.rs  proto.rs
clients/sov-celestia/types/src/client_message/: aggregated_proof.rs  header.rs  misbehaviour.rs  mod.rs  pretty.rs  sov_header.rs  sov_misbehaviour.rs
clients/sov-celestia/types/src/client_state/: at_counterparty.rs  da_params.rs  definition.rs  mod.rs  rollup.rs
clients/sov-celestia/types/src/consensus_state/: da_params.rs  definition.rs  mod.rs
clients/sov-types/: Cargo.toml
clients/sov-types/src/: aggregated_proof.rs  client_params.rs  consensus_params.rs  error.rs  lib.rs
clients/sov-types/src/helpers/: mod.rs
crates/clients/sov-celestia-client-cw/: Cargo.toml
crates/clients/sov-celestia-client-cw/src/: entrypoint.rs
crates/relayer/sovereign-chain-components/: Cargo.toml
crates/relayer/sovereign-chain-components/src/: lib.rs
crates/relayer/sovereign-chain-components/src/cosmos/: components.rs  mod.rs
crates/relayer/sovereign-chain-components/src/encoding/: components.rs  mod.rs
crates/relayer/sovereign-integration-tests/: .gitignore  Cargo.toml
crates/relayer/sovereign-integration-tests/src/: lib.rs
crates/relayer/sovereign-integration-tests/tests/: bootstrap.rs  cosmos_to_sovereign.rs  sovereign_to_cosmos.rs
crates/relayer/sovereign-relayer/: Cargo.toml
crates/relayer/sovereign-relayer/src/: lib.rs
crates/relayer/sovereign-relayer/src/contexts/: mod.rs  (+6 more)
crates/relayer/sovereign-rollup-components/: Cargo.toml
crates/relayer/sovereign-rollup-components/src/: components.rs  lib.rs
crates/relayer/sovereign-test-components/: Cargo.toml
crates/relayer/sovereign-test-components/src/: lib.rs
crates/sov-ibc/: Cargo.toml
crates/sov-ibc/src/: call.rs  codec.rs  context.rs  lib.rs
crates/sov-ibc/src/clients/: context.rs  mod.rs
crates/sov-ibc/src/query/: context.rs  methods.rs
crates/sov-ibc/src/test_utils/: mod.rs
crates/sov-ibc/src/tests/: transfer.rs
mocks/: Cargo.toml  README.md  celestia_rollup_config.toml
mocks/src/: configs.rs  lib.rs  setup.rs  utils.rs
mocks/src/configs/: mod.rs  transfer.rs
mocks/src/cosmos/: app.rs  builder.rs  configs.rs  core.rs  handle.rs  manual.rs  mod.rs  runner.rs  utils.rs
mocks/src/cosmos/helpers/: convert.rs  dummy.rs  mod.rs
mocks/src/relayer/: builder.rs  context.rs  handle.rs  mod.rs  relay.rs
mocks/src/relayer/handle/: cosmos.rs  mod.rs  rollup.rs
mocks/src/relayer/msgs/: cosmos.rs  rollup.rs
mocks/src/sovereign/: app.rs  builder.rs  celestia.rs  config.rs  configs.rs  da_service.rs  handle.rs  manual.rs  mod.rs  rollup.rs  runner.rs  runtime.rs
mocks/src/sovereign/runtime/: config.rs  mod.rs
mocks/src/tests/: client.rs  mod.rs  transfer.rs
mocks/src/utils/: configs.rs  mod.rs  mutex.rs
modules/sov-consensus-state-tracker/: Cargo.toml
modules/sov-consensus-state-tracker/src/: celestia_da.rs  lib.rs  mock_da.rs
modules/sov-ibc/: Cargo.toml  README.md
modules/sov-ibc-transfer/: Cargo.toml  README.md
modules/sov-ibc-transfer/src/: call.rs  context.rs  genesis.rs  lib.rs  query.rs  rpc.rs  utils.rs
modules/sov-ibc/src/: call.rs  codec.rs  context.rs  event.rs  genesis.rs  lib.rs  router.rs
modules/sov-ibc/src/clients/: context.rs  mod.rs
modules/sov-ibc/src/query/: context.rs  methods.rs  mod.rs
modules/sov-ibc/src/rpc/: context.rs  helpers.rs  methods.rs  mod.rs  responses.rs
proto/: Cargo.toml  README.md  buf.yaml
proto/compiler/: Cargo.toml  sync-protobuf.sh
proto/compiler/src/: cmd.rs  main.rs
proto/sovereign/types/v1/: types.proto
proto/src/: lib.rs
proto/src/prost/: ibc.lightclients.sovereign.tendermint.v1.rs  ibc.lightclients.sovereign.tendermint.v1.serde.rs  sovereign.types.v1.rs  sovereign.types.v1.serde.rs
(+292 files in other folders)
