[workspace]
resolver = "2"
members = [
    "proto",
    "proto/compiler",
    "clients/sov-celestia/types",
    "clients/sov-celestia",
    "clients/sov-celestia-cw",
    "modules/sov-ibc-transfer",
    "modules/sov-ibc",
    "modules/sov-consensus-state-tracker",
    "mocks",
]

exclude = [
    "ci/risc0-check"
]

[workspace.package]
version      = "0.1.0"
license      = "MIT OR Apache-2.0"
edition      = "2021"
rust-version = "1.75"
publish      = false
authors      = ["Informal Systems <hello@informal.systems>"]
repository   = "https://github.com/informalsystems/sovereign-ibc"

[workspace.lints.rust]
unsafe_code                   = "forbid"
dead_code                     = "deny"
rust_2018_idioms              = "deny"
trivial_casts                 = "deny"
unused_import_braces          = "deny"
unused_variables              = "allow"

[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args         = "deny"

[workspace.dependencies]
# external dependencies
anyhow      = "1.0.68"
base64      = { version = "0.21", default-features = false }
borsh       = { version = "0.10.3", features = ["rc", "bytes"] }
bytes       = { version = "1.2.1", default-features = false }
derive_more = { version = "0.99.11", features = ["from", "try_into"] }
digest      = "0.10.6"
hex         = "0.4.3"
jmt         = { version = "0.9.0" }
jsonrpsee   = { version = "0.20.1", features = ["jsonrpsee-types", "macros", "client", "server"] }
prost       = { version = "0.12", default-features = false }
prost-build = { version = "0.12", default-features = false }
sha2        = { version = "0.10.6", default-features = false }
serde       = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_json  = "1.0"
schemars    = { version = "0.8.12", features = ["derive"] }
tempfile    = "3.5"
thiserror   = "1.0.38"
tracing     = { version = "0.1.40", default-features = false }

# ibc depedenencies
ibc-core              = { version = "0.51.0", default-features = false, features = ["borsh","schema"] }
ibc-core-client       = { version = "0.51.0", default-features = false }
ibc-core-host-cosmos  = { version = "0.51.0", default-features = false }
ibc-client-tendermint = { version = "0.51.0", default-features = false }
ibc-client-wasm-types = { version = "0.51.0", default-features = false }
ibc-app-transfer      = { version = "0.51.0", default-features = false }
ibc-primitives        = { version = "0.51.0", default-features = false }
ibc-query             = { version = "0.51.0", default-features = false, features = ["schema"] }
ibc-testkit           = { version = "0.51.0", default-features = false }

# NOTE: `ibc-proto` is solely required by `sov-ibc-proto`. When needing Protobuf
# Rust types in the project, importing from their respective `ibc` type crates is
# a more efficient approach.
ibc-proto             = { version = "0.42.2", default-features = false }

# cosmos dependencies
tendermint            = { version = "0.34", default-features = false }
tendermint-proto      = { version = "0.34", default-features = false }
tendermint-testgen    = { version = "0.34", default-features = false }
tendermint-light-client-verifier = { version = "0.34", default-features = false }

# sovereign dependencies
sov-bank                   = { version = "0.3.0" }
sov-celestia-adapter       = { version = "0.3.0" }
sov-mock-da                = { version = "0.3.0" }
sov-modules-api            = { version = "0.3.0" }
sov-modules-core           = { version = "0.3.0" }
sov-state                  = { version = "0.3.0" }
sov-rollup-interface       = { version = "0.3.0" }

### utilized only by `sov-ibc-mocks`
sov-chain-state            = { version = "0.3.0" }
sov-kernels                = { version = "0.3.0" }
sov-mock-zkvm              = { version = "0.3.0" }
sov-prover-storage-manager = { version = "0.3.0" }
const-rollup-config        = { version = "0.3.0" }

[patch.crates-io]

ibc-core                    = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c579628c67" }
ibc-core-client             = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c579628c67" }
ibc-core-host-cosmos        = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c579628c67" }
ibc-client-tendermint       = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c579628c67" }
ibc-client-wasm-types       = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c579628c67" }
ibc-app-transfer            = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c579628c67" }
ibc-primitives              = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c579628c67" }
ibc-query                   = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c579628c67" }
ibc-testkit                 = { git = "https://github.com/cosmos/ibc-rs.git", rev = "c579628c67" }

sov-bank                    = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
sov-celestia-adapter        = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
sov-mock-da                 = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
sov-modules-api             = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
sov-modules-core            = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
sov-state                   = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
sov-rollup-interface        = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
sov-chain-state             = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
sov-kernels                 = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
sov-mock-zkvm               = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
sov-prover-storage-manager  = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }
const-rollup-config         = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "20bfd68" }

jmt                         = { git = "https://github.com/penumbra-zone/jmt.git", rev = "1d007e11cb68aa5ca13e9a5af4a12e6439d5f7b6" }
