[workspace]
resolver = "2"
members = [
  "crates/proto/sov-ibc-proto",
  "crates/proto/sov-ibc-proto-compiler",
  "crates/clients/sov-client-types",
  "crates/clients/sov-celestia-client",
  "crates/clients/sov-celestia-client-types",
  "crates/clients/sov-celestia-client-cw",
  "crates/modules/sov-ibc",
  "crates/modules/sov-ibc-transfer",
  "crates/modules/sov-consensus-state-tracker",
  "crates/test/sov-ibc-mocks",
  "crates/relayer/sovereign-chain-components",
  "crates/relayer/sovereign-rollup-components",
  "crates/relayer/sovereign-relayer",
  "crates/relayer/sovereign-test-components",
  "crates/relayer/sovereign-integration-tests",
]

exclude = [
  "ci/risc0-check",
  "vendor/sovereign-sdk",
]

[workspace.package]
version      = "0.1.0"
license      = "MIT OR Apache-2.0"
edition      = "2021"
rust-version = "1.77"
publish      = false
authors      = [ "Informal Systems <hello@informal.systems>" ]
repository   = "https://github.com/informalsystems/sovereign-ibc"

[workspace.lints.rust]
unsafe_code          = "forbid"
dead_code            = "deny"
rust_2018_idioms     = "deny"
trivial_casts        = "deny"
unused_import_braces = "deny"
unused_variables     = "deny"

[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args         = "deny"

[workspace.dependencies]

sov-ibc-proto               = { version = "0.1.0" }
sov-client-types            = { version = "0.1.0" }
sov-celestia-client         = { version = "0.1.0", default-features = false }
sov-celestia-client-types   = { version = "0.1.0", default-features = false }
sov-ibc                     = { version = "0.1.0" }
sov-ibc-transfer            = { version = "0.1.0" }
sov-consensus-state-tracker = { version = "0.1.0" }

# ibc depedenencies
ibc                   = { version = "0.53.0", default-features = false }
ibc-core              = { version = "0.53.0", default-features = false, features = [ "borsh", "schema" ] }
ibc-core-client       = { version = "0.53.0", default-features = false }
ibc-core-host-cosmos  = { version = "0.53.0", default-features = false }
ibc-client-tendermint = { version = "0.53.0", default-features = false }
ibc-client-wasm-types = { version = "0.53.0", default-features = false }
ibc-client-cw         = { version = "0.53.0", default-features = false }
ibc-app-transfer      = { version = "0.53.0", default-features = false }
ibc-primitives        = { version = "0.53.0", default-features = false }
ibc-query             = { version = "0.53.0", default-features = false, features = [ "schema" ] }
ibc-testkit           = { version = "0.53.0", default-features = false }

# NOTE: `ibc-proto` is solely required by `sov-ibc-proto`. When needing Protobuf
# Rust types from `ibc-proto` in the project, importing from respective `ibc`
# crates is a more efficient approach.
ibc-proto = { version = "0.44.0", default-features = false }

basecoin = { version = "0.1.0" }

# cosmos dependencies
tendermint                       = { version = "0.36", default-features = false }
tendermint-proto                 = { version = "0.36", default-features = false }
tendermint-testgen               = { version = "0.36", default-features = false }
tendermint-light-client-verifier = { version = "0.36", default-features = false }

# sovereign dependencies
sov-bank             = { version = "0.3.0" }
sov-celestia-adapter = { version = "0.3.0" }
sov-mock-da          = { version = "0.3.0" }
sov-modules-api      = { version = "0.3.0" }
sov-state            = { version = "0.3.0" }
sov-rollup-interface = { version = "0.3.0" }

### utilized only by `sov-ibc-mocks`
sov-chain-state            = { version = "0.3.0" }
sov-kernels                = { version = "0.3.0" }
sov-mock-zkvm              = { version = "0.3.0" }
sov-prover-storage-manager = { version = "0.3.0" }
const-rollup-config        = { version = "0.3.0" }

# Hermes SDK relayer dependencies

hermes-runtime-components       = { version = "0.1.0" }
hermes-async-runtime-components = { version = "0.1.0" }
hermes-tokio-runtime-components = { version = "0.1.0" }
hermes-runtime                  = { version = "0.1.0" }

hermes-encoding-components          = { version = "0.1.0" }
hermes-protobuf-encoding-components = { version = "0.1.0" }

hermes-logging-components = { version = "0.1.0" }

hermes-relayer-components       = { version = "0.1.0" }
hermes-relayer-components-extra = { version = "0.1.0" }

hermes-test-components = { version = "0.1.0" }

hermes-cosmos-chain-components  = { version = "0.1.0" }
hermes-cosmos-relayer           = { version = "0.1.0" }
hermes-cosmos-test-components   = { version = "0.1.0" }
hermes-cosmos-integration-tests = { version = "0.1.0" }

hermes-wasm-client-components = { version = "0.1.0" }
hermes-wasm-test-components   = { version = "0.1.0" }

hermes-celestia-chain             = { version = "0.1.0" }
hermes-celestia-test-components   = { version = "0.1.0" }
hermes-celestia-integration-tests = { version = "0.1.0" }

hermes-sovereign-chain-components  = { version = "0.1.0" }
hermes-sovereign-rollup-components = { version = "0.1.0" }
hermes-sovereign-relayer           = { version = "0.1.0" }
hermes-sovereign-test-components   = { version = "0.1.0" }
hermes-sovereign-integration-tests = { version = "0.1.0" }

ibc-relayer       = { version = "0.27.3" }
ibc-relayer-types = { version = "0.27.3" }
ibc-telemetry     = { version = "0.27.3" }

cgp-core       = { version = "0.1.0" }
cgp-error-eyre = { version = "0.1.0" }

# external dependencies
anyhow             = "1.0.68"
base64             = { version = "0.21", default-features = false }
borsh              = { version = "0.10.3", features = [ "rc", "bytes" ] }
bytes              = { version = "1.2.1", default-features = false }
derive_more        = { version = "0.99.11", features = [ "from", "try_into" ] }
digest             = "0.10.6"
hex                = "0.4.3"
jmt                = { version = "0.9.0" }
jsonrpsee          = { version = "0.22.5", features = [ "jsonrpsee-types", "macros", "client", "server" ] }
prost              = { version = "0.12", default-features = false }
prost-build        = { version = "0.12", default-features = false }
sha2               = { version = "0.10.6", default-features = false }
serde              = { version = "1.0", default-features = false, features = [ "derive", "rc" ] }
serde_json         = "1.0"
schemars           = { version = "0.8.12", features = [ "derive" ] }
tempfile           = "3.5"
thiserror          = "1.0.38"
tracing            = { version = "0.1.40", default-features = false }
bech32             = { version = "0.9.1" }
eyre               = { version = "0.6.12" }
tokio              = { version = "1.36" }
tonic              = { version = "0.11" }
ed25519-dalek      = { version = "2.1.1" }
futures            = { version = "0.3.30", default-features = false }
rand               = { version = "0.8.5" }
toml               = { version = "0.8.12" }
tracing-subscriber = { version = "0.3.18" }

# Note: the `[patch.crates-io]` section is placed at `./cargo/config.toml`
