[package]
name = "sov-ibc-mocks"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
readme       = "README.md"
publish      = false

[dependencies]
# external dependencies
anyhow        = { workspace = true }
async-trait   = { version = "0.1.74", default-features = false }
base64        = { workspace = true }
borsh         = { workspace = true }
prost         = { workspace = true }
sha2          = { version = "0.10.6", default-features = false }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { version = "1", features = ["full"] }
toml          = "0.8.0"
tower-abci    = "0.11"
tower         = { version = "0.4", features = ["full"] }
tempfile      = { workspace = true }
tracing       = "0.1.36"
typed-builder = "0.18.0"

# internal dependencies
sov-ibc                     = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "83b71a0" }
sov-ibc-transfer            = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "83b71a0" }
sov-consensus-state-tracker = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "83b71a0" }
sov-celestia-client         = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "83b71a0", features = ["test-util"] }

# ibc dependencies
ibc-core              = { workspace = true }
ibc-app-transfer      = { workspace = true }
ibc-client-tendermint = { workspace = true }
ibc-core-host-cosmos  = { workspace = true }
ibc-query             = { workspace = true }
ibc-testkit           = { workspace = true }

# cosmos dependencies
basecoin             = { git = "https://github.com/informalsystems/basecoin-rs.git", rev = "69df0bd" }
tendermint           = { workspace = true }
tendermint-testgen   = { workspace = true }

# sovereign dependencies
sov-bank                   = { workspace = true }
sov-chain-state            = { workspace = true }
sov-modules-api            = { workspace = true }
sov-rollup-interface       = { workspace = true }
sov-state                  = { workspace = true }

const-rollup-config        = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "3f94cecc", optional = true }
sov-mock-zkvm              = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "3f94cecc", features = ["native"], optional = true }
sov-modules-stf-blueprint  = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "3f94cecc", features = ["native"], optional = true }
sov-prover-storage-manager = { git = "ssh://git@github.com/informalsystems/sovereign-sdk-wip.git", rev = "3f94cecc", features = ["test-utils"] }
jmt = { git = "https://github.com/penumbra-zone/jmt.git", rev = "1d007e11cb68aa5ca13e9a5af4a12e6439d5f7b6" }

[dev-dependencies]
test-log              = { version = "0.2.14", default-features = false, features = ["trace"] }
tracing-subscriber    = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[features]
default = ["mock-da"]
native = [
    "sov-bank/native",
    "sov-ibc/native",
    "sov-ibc-transfer/native",
    "sov-chain-state/native",
    "sov-modules-api/native",
    "sov-state/native",
    "sov-rollup-interface/native",
    "sov-mock-zkvm",
    "sov-modules-stf-blueprint",
]
mock-da = [
    "native",
    "sov-consensus-state-tracker/mock-da"
]
celestia-da = [
    "native",
    "const-rollup-config",
    "sov-consensus-state-tracker/celestia-da"
]

