[package]
name = "sov-ibc-mocks"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
readme       = "README.md"
publish      = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow        = { workspace = true }
async-trait   = { version = "0.1.74", default-features = false }
borsh         = { workspace = true }
jmt           = { workspace = true }
prost         = { workspace = true }
sha2          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { version = "1", features = ["full"] }
toml          = "0.8.0"
tower-abci    = "0.11"
tower         = { version = "0.4", features = ["full"] }
tempfile      = { workspace = true }
tracing       = "0.1.36"
typed-builder = "0.18.0"

# internal dependencies
sov-ibc                     = { version = "0.1.0" }
sov-ibc-transfer            = { version = "0.1.0" }
sov-consensus-state-tracker = { version = "0.1.0" }
sov-celestia-client         = { version = "0.1.0", features = ["test-util"] }

# ibc dependencies
ibc-core              = { workspace = true }
ibc-app-transfer      = { workspace = true }
ibc-client-tendermint = { workspace = true }
ibc-core-host-cosmos  = { workspace = true }
ibc-query             = { workspace = true }
ibc-testkit           = { workspace = true }

# cosmos dependencies
basecoin             = { workspace = true }
tendermint           = { workspace = true }
tendermint-testgen   = { workspace = true }

# sovereign dependencies
sov-bank                   = { workspace = true }
sov-chain-state            = { workspace = true }
sov-modules-api            = { workspace = true }
sov-state                  = { workspace = true }
sov-rollup-interface       = { workspace = true }
const-rollup-config        = { workspace = true, optional = true }
sov-kernels                = { workspace = true, features = ["native"], optional = true }
sov-mock-zkvm              = { workspace = true, features = ["native"], optional = true }
sov-prover-storage-manager = { workspace = true, features = ["test-utils"] }
sov-mock-da                = { workspace = true, features = ["native"], optional = true }

[dev-dependencies]
test-log              = { version = "0.2.14", default-features = false, features = ["trace"] }
tracing-subscriber    = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[features]
default = ["mock-da", "sov-modules-api/test-utils"]
native = [
    "sov-bank/native",
    "sov-ibc/native",
    "sov-ibc-transfer/native",
    "sov-chain-state/native",
    "sov-modules-api/native",
    "sov-state/native",
    "sov-rollup-interface/native",
    "sov-mock-zkvm",
    "sov-kernels",
    "sov-mock-da",
]
mock-da = [
    "native",
    "sov-consensus-state-tracker/mock-da"
]
celestia-da = [
    "native",
    "const-rollup-config",
    "sov-consensus-state-tracker/celestia-da"
]

