[package]
name = "sov-celestia-client"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
publish = false

[dependencies]
# external dependencies
base64 = { workspace = true, features = ["alloc"] }
bytes = { workspace = true }
derive_more = { workspace = true }
prost = { workspace = true, default-features = false }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json =  { package = "serde-json-wasm", version = "1.0.0" , default-features = false, optional = true }
thiserror = { version = "1.0.31" }
typed-builder = { version = "0.18.0", optional = true }

# ibc dependencies
ibc = { workspace = true }
ibc-proto = { version = "0.37.1", default-features = false }
ics23 = {version = "0.11", default-features = false }
ics08-wasm = { path = "../ics08-wasm", default-features = false, features = ["cosmwasm"] }

# DA layer dependencies
tendermint = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "1f8b574", default-features = false }
tendermint-proto = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "1f8b574" }
tendermint-light-client-verifier = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "1f8b574" }

celestia-proto = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "1fa61eb" }
celestia-types = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "1fa61eb", default-features = false }

[dev-dependencies]
typed-builder = "0.18.0"
hex = "0.4.3"

[features]
default = ["std"]
std = [
	"ibc/std",
	"ibc-proto/std",
	"ics23/std",
	"prost/std",
	"serde/std",
	"serde_json/std",
	"tendermint/std"
]
serde = [
	"ibc/serde",
	"ibc-proto/serde",
	"ics23/serde",
	"dep:serde",
	"serde_json",
]
json-schema = [
	"ibc/schema",
	"ibc-proto/json-schema",
	"dep:schemars",
]
test-utils = ["dep:typed-builder"]