[package]
name 	     = "sov-celestia-client"
authors 	 = { workspace = true }
edition 	 = { workspace = true }
license 	 = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
readme       = "README.md"
publish      = false

[dependencies]
# external dependencies
derive_more   = { workspace = true }
prost         = { workspace = true }
schemars      = { workspace = true, optional = true }
serde         = { workspace = true, features = ["derive"], optional = true }
typed-builder = { version = "0.18.0", optional = true }

# ibc dependencies
ibc-core                  = { workspace = true }
ibc-client-tendermint     = { workspace = true }
sov-celestia-client-types = { path = "./types", default-features = false }
ics23 	                  = { version = "0.11", default-features = false }

# DA layer dependencies
tendermint                       = { workspace = true }
tendermint-proto 				 = { workspace = true }
tendermint-light-client-verifier = { workspace = true }

[dev-dependencies]
typed-builder = "0.18.0"
hex 		  = "0.4.3"

[features]
default = ["std"]
std = [
	"ibc-core/std",
	"ibc-client-tendermint/std",
	"sov-celestia-client-types/std",
	"ics23/std",
	"prost/std",
	"serde/std",
	"tendermint/std"
]
serde = [
	"ibc-core/serde",
	"ibc-client-tendermint/serde",
	"sov-celestia-client-types/serde",
	"ics23/serde",
	"dep:serde",
]
json-schema = [
	"ibc-core/schema",
	"dep:schemars",
]
test-utils = ["dep:typed-builder"]